--- a/Document/牛人代码、博客集合.md
+++ b/Document/牛人代码、博客集合.md
@@ -61,6 +61,7 @@
 * [环形的View](https://github.com/WZF-Fei/ZFProgressView)
 
 * [圆形图片，设置任意一个角](https://github.com/raozhizhen/JMRoundedCorner	)
+* [仿QQ选择多张照片](https://github.com/banchichen/TZImagePickerController)
 
 ####Swift
 
