--- a/Document/牛人代码、博客集合.md
+++ b/Document/牛人代码、博客集合.md
@@ -4,8 +4,9 @@
 
 ###牛人博客
 
-* [里脊串的开发随笔](http://adad184.com/2014/08/21/kai-yuan-xiang-mu-mmplaceholder/)
+* [牛人GitHub地址](https://github.com/fastred?tab=repositories)
 
+* [里脊串的开发随笔](http://adad184.com/2014/08/21/kai-yuan-xiang-mu-mmplaceholder/)
 * [王巍的技术博客](https://onevcat.com/#blog)
 * [IT985博客](http://blog.it985.com/category/ios)
 * [StrongX的个人博客](http://www.strongx.cn/)
@@ -15,6 +16,7 @@
 * [iOS音频、视频、拍照录像](http://www.cnblogs.com/kenshincui/p/4186022.html)
 * [iOS开发系列--触摸事件、手势识别、摇晃事件、耳机线控](http://www.cnblogs.com/kenshincui/p/3950646.html)
 * [CALayer动画博客](http://www.cnblogs.com/kenshincui/p/3972100.html)
+
 
 ###牛人代码
 
