--- a/Document/老鸟代码、博客集合.md
+++ b/Document/老鸟代码、博客集合.md
@@ -1,14 +1,18 @@
-##牛人代码、博客集合
+##老鸟代码、博客集合
 
 [TOC]
 
-###牛人博客
+###老鸟博客
 
-* [牛人GitHub地址](https://github.com/fastred?tab=repositories)
+* [老鸟GitHub地址](https://github.com/fastred?tab=repositories)
+
+* [老鸟动画效果](https://github.com/KittenYang)
+* [老鸟学习总结](https://github.com/huang303513)
 
 * [里脊串的开发随笔](http://adad184.com/2014/08/21/kai-yuan-xiang-mu-mmplaceholder/)
 * [王巍的技术博客](https://onevcat.com/#blog)
 * [IT985博客](http://blog.it985.com/category/ios)
+* [Kitten's 时间胶囊](http://kittenyang.com)
 * [StrongX的个人博客](http://www.strongx.cn/)
 * [小小小的骆驼的博客](http://www.voidcn.com/blog/xiaoluodecai/article/p-4520486.html)
 * [雷纯锋的技术博客](http://blog.leichunfeng.com/blog/2016/02/27/mvvm-with-reactivecocoa/)
@@ -18,7 +22,7 @@
 * [CALayer动画博客](http://www.cnblogs.com/kenshincui/p/3972100.html)
 
 
-###牛人代码
+###老鸟代码
 
 ####完整APP项目
 
