--- a/Document/老鸟代码、博客集合.md
+++ b/Document/老鸟代码、博客集合.md
@@ -68,6 +68,7 @@
 
 * [圆形图片，设置任意一个角](https://github.com/raozhizhen/JMRoundedCorner	)
 * [仿QQ选择多张照片](https://github.com/banchichen/TZImagePickerController)
+* [网易新闻评论盖楼](https://github.com/xxhp/NewsCommentLayout)
 
 ####Swift
 
