add photo browser

--- a/Document/老鸟代码、博客集合.md
+++ b/Document/老鸟代码、博客集合.md
@@ -70,7 +70,20 @@
 * [仿QQ选择多张照片](https://github.com/banchichen/TZImagePickerController)
 * [网易新闻评论盖楼](https://github.com/xxhp/NewsCommentLayout)
 
+####图片浏览
+* [XLPhotoBrowser](https://github.com/Shannoon/XLPhotoBrowser)
+* [PhotoBrowser](https://github.com/cuzv/PhotoBrowser)
+* [MSSBrowse](https://github.com/MSS0306/MSSBrowse)
+* [PYPhotoBrowser 添加图片展示图片](https://github.com/iphone5solo/PYPhotoBrowser)
+* [一个功能强大的图片选择器（类似QQ图片选择器），支持即时拍照存储立即选择](https://github.com/XZTLLQ/LQPhotoPickerDemo)
+* [图片上传，支持拍照与相册选取，可设置图片张数限制](https://github.com/KKKiller/KKImageUpload)
+
 ####Swift
 
 * [Swift开源项目](https://github.com/ipader/SwiftGuide/blob/master/Featured.md)
+
+####新闻
+* [一个集新闻与娱乐于一体的iOS新闻客户端](https://github.com/577528249/TTNews)
+* [DayDayNews](https://github.com/gaoyuhang/DayDayNews)
+* [仿网易新闻](https://github.com/Roylee-ML/WYNews_ZhiXun)
 
